Removed unused warning